--- a/free-nodes/2024-5-5-free-ssr-subscribe.htm
+++ b/free-nodes/2024-5-5-free-ssr-subscribe.htm
@@ -3,13 +3,13 @@
 <html lang="zh-CN">
 <head>
 <link rel="canonical" href="https://clashgithub.github.io" />
-<title>5月4日→22.7M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</title>
+<title>5月5日→22.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <link rel="icon" href="/assets/addons/xcblog/img/clashgithub/favicon.ico" type="image/x-icon"/>
-<meta name="keywords" content="5月4日Clash订阅链接, SSR订阅, Shadowrocket订阅链接Clash Github演示站" />
-<meta name="description" content="5月4日节点订阅更新,SSR/V2ray/Clash/Shadowrocket免费节点订阅链接,我们专注免费节点每天更新,这一次的节点更新覆盖了新加坡、香港、美国、欧洲、韩国、加拿大、日本等地区,最高速度可达22.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。" />
+<meta name="keywords" content="5月5日Clash订阅链接, SSR订阅, Shadowrocket订阅链接Clash Github演示站" />
+<meta name="description" content="5月5日节点订阅更新,Clash/V2ray/SSR/Shadowrocket免费节点订阅链接,我们专注免费节点每天更新,这一次的节点更新覆盖了欧洲、日本、新加坡、美国、加拿大、韩国、香港等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- //for-mobile-apps -->
@@ -81,7 +81,7 @@
 <!-- about -->
 	<div class="about">
 		<div class="container">
-			<h1 style="word-break: break-all;">5月4日→22.7M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</h1>
+			<h1 style="word-break: break-all;">5月5日→22.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</h1>
 			<ul>
 				<li><a href="/">首页</a><i>|</i></li>
 				<li><a href="/free-nodes/">免费节点</a><i>|</i></li>
@@ -95,7 +95,7 @@
 		<div class="container">
 
 			<div class="wthree_single_grid1">
-				<p>这次的更新跨足了新加坡、香港、美国、欧洲、韩国、加拿大、日本等多个地区，节点覆盖广泛，最高速度可达22.7 M/S。这意味着，无论您身处何处，都能享受到更快、更稳定的网络连接。这些新节点的加入，不仅为您提供了更广泛的网络覆盖，还能让您轻松解锁全球各地的网络内容，尽情畅游互联网。无论是日本的动漫、美国的影视、还是欧洲的新闻，都能够一手掌握。只需复制下方提供的v2ray/Clash订阅链接，添加到您的客户端，就能立即体验到新节点带来的畅快感受。这次更新的目的就是为了让您拥有更畅快、更愉悦的网络体验，享受高速流畅的网络连接。随着全球互联网的发展，网络已经成为我们生活中不可或缺的一部分，而这次更新就是为了让您更好地融入这个数字化的世界。</p><p>&nbsp;</p><h3>高速机场推荐1【FCCloud】</h3><p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;"><font color="#606266">五一劳动节优惠活动 8折 优惠码 </font><b style=""><font color="#ff0000">202405</font></b><font color="#606266"> 有效期至 2024-05-06 00:00:00 下单时输入优惠码后点击验证，价格即会更新，费用低至0.33元/天,无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
+				<p>这次的更新跨足了欧洲、日本、新加坡、美国、加拿大、韩国、香港等多个地区，节点覆盖广泛，最高速度可达22.9 M/S。这意味着，无论您身处何处，都能享受到更快、更稳定的网络连接。这些新节点的加入，不仅为您提供了更广泛的网络覆盖，还能让您轻松解锁全球各地的网络内容，尽情畅游互联网。无论是日本的动漫、美国的影视、还是欧洲的新闻，都能够一手掌握。只需复制下方提供的v2ray/Clash订阅链接，添加到您的客户端，就能立即体验到新节点带来的畅快感受。这次更新的目的就是为了让您拥有更畅快、更愉悦的网络体验，享受高速流畅的网络连接。随着全球互联网的发展，网络已经成为我们生活中不可或缺的一部分，而这次更新就是为了让您更好地融入这个数字化的世界。</p><p>&nbsp;</p><h3>高速机场推荐1【FCCloud】</h3><p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;"><font color="#606266">五一劳动节优惠活动 8折 优惠码 </font><b style=""><font color="#ff0000">202405</font></b><font color="#606266"> 有效期至 2024-05-06 00:00:00 下单时输入优惠码后点击验证，价格即会更新，费用低至0.33元/天,无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
 IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</font></p><font color="#606266">
 
 
@@ -109,11 +109,10 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
 
 <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.easyfastcloud.com/#/register?code=" data-code="wcHPHUo2" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">EFCloud（点击注册）</a>】</p>
 
-</font><p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2024/05/0-20240504.yaml</p><p>https://clashgithub.github.io/uploads/2024/05/1-20240504.yaml</p><p>https://clashgithub.github.io/uploads/2024/05/2-20240504.yaml</p><p>https://clashgithub.github.io/uploads/2024/05/3-20240504.yaml</p><p>https://clashgithub.github.io/uploads/2024/05/4-20240504.yml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://clashgithub.github.io/uploads/2024/05/0-20240504.txt</p><p>https://clashgithub.github.io/uploads/2024/05/1-20240504.txt</p><p>https://clashgithub.github.io/uploads/2024/05/2-20240504.txt</p><p>https://clashgithub.github.io/uploads/2024/05/3-20240504.txt</p><p>https://clashgithub.github.io/uploads/2024/05/4-20240504.txt</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://muguacloud.top/#/register?code=" data-code="MQag6brk" rel="nofollow noopener" style="color:#c00;">木瓜云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>			</div>
+</font><p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2024/05/0-20240505.yaml</p><p>https://clashgithub.github.io/uploads/2024/05/1-20240505.yaml</p><p>https://clashgithub.github.io/uploads/2024/05/2-20240505.yaml</p><p>https://clashgithub.github.io/uploads/2024/05/3-20240505.yaml</p><p>https://clashgithub.github.io/uploads/2024/05/4-20240505.yml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://clashgithub.github.io/uploads/2024/05/0-20240505.txt</p><p>https://clashgithub.github.io/uploads/2024/05/1-20240505.txt</p><p>https://clashgithub.github.io/uploads/2024/05/2-20240505.txt</p><p>https://clashgithub.github.io/uploads/2024/05/3-20240505.txt</p><p>https://clashgithub.github.io/uploads/2024/05/4-20240505.txt</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://muguacloud.top/#/register?code=" data-code="MQag6brk" rel="nofollow noopener" style="color:#c00;">木瓜云</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>			</div>
 
             <div class="col-md-12 mt-5">
-                                <p>上一个：<a href="/free-nodes/2024-5-3-clash-v2ray-ss-ssr.htm">5月3日→20.3M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></p>
-                                <p>下一个：<a href="/free-nodes/2024-5-5-free-ssr-subscribe.htm">5月5日→22.9M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></p>
+                                <p>上一个：<a href="/free-nodes/2024-5-4-clash-node-daily-updates.htm">5月4日→22.7M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</a></p>
                             </div>
 
                         <div class="panel panel-default mt-5">
@@ -122,6 +121,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                 </div>
                 <div class="panel-body">
                     <ul class="p-0 x-0">
+                                                <li class="py-2"><a href="/free-nodes/2024-5-4-clash-node-daily-updates.htm">5月4日→22.7M/S|2024年最新免费节点SSR/V2ray/Clash/Shadowrocket订阅链接地址</a></li>
                                                 <li class="py-2"><a href="/free-nodes/2024-5-3-clash-v2ray-ss-ssr.htm">5月3日→20.3M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
                                                 <li class="py-2"><a href="/free-nodes/2024-5-2-free-subscribe-node.htm">5月2日→19.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
                                                 <li class="py-2"><a href="/free-nodes/2024-5-1-free-v2ray.htm">5月1日→18.8M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址</a></li>
@@ -131,7 +131,6 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
                                                 <li class="py-2"><a href="/free-nodes/2024-4-27-clash-v2ray-ss-ssr.htm">4月27日→19.7M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接</a></li>
                                                 <li class="py-2"><a href="/free-nodes/2024-4-26-free-node-subscribe-links.htm">4月26日→19.2M/S|2024年最新免费节点SSR/Clash/Shadowrocket/V2ray订阅链接</a></li>
                                                 <li class="py-2"><a href="/free-nodes/2024-4-25-free-node-subscribe.htm">4月25日→21.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接</a></li>
-                                                <li class="py-2"><a href="/free-nodes/2024-4-24-clash-windows.htm">4月24日→22.7M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接</a></li>
                                             </ul>
                 </div>
             </div>
