--- a/free-nodes/page-2.htm
+++ b/free-nodes/page-2.htm
@@ -91,6 +91,22 @@
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
+				<a href="/free-nodes/2024-4-25-free-node-subscribe.htm">
+					<img src="/uploads/20240228/e257e01abd056413997dc08bd6b623fb.webp" alt="4月25日→21.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接" class="img-responsive" />
+				</a>
+			</div>
+			<div class="col-md-8 agileits_welcome_grid_left">
+				<a href="/free-nodes/2024-4-25-free-node-subscribe.htm">
+					<h2>4月25日→21.5M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接</h2>
+				</a>
+				<p>这一次的节点更新覆盖了美国、韩国、加拿大、日本、欧洲、新加坡、香港等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+		<div class="welcome">
+		<div class="container">
+			<div class="col-md-4 agileits_welcome_grid_right">
 				<a href="/free-nodes/2024-4-24-clash-windows.htm">
 					<img src="/uploads/20240228/7ddf641cb9c3a427b5c3f54540cf62b6.webp" alt="4月24日→22.7M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接" class="img-responsive" />
 				</a>
@@ -228,22 +244,6 @@
 					<h2>4月16日→20.6M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接</h2>
 				</a>
 				<p>这一次的节点更新覆盖了韩国、美国、香港、欧洲、新加坡、日本、加拿大等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-		<div class="welcome">
-		<div class="container">
-			<div class="col-md-4 agileits_welcome_grid_right">
-				<a href="/free-nodes/2024-4-15-node-share-links.htm">
-					<img src="/uploads/20240228/fef0909e4847bf6f5fa889948879dd84.webp" alt="4月15日→18.6M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接" class="img-responsive" />
-				</a>
-			</div>
-			<div class="col-md-8 agileits_welcome_grid_left">
-				<a href="/free-nodes/2024-4-15-node-share-links.htm">
-					<h2>4月15日→18.6M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接</h2>
-				</a>
-				<p>这一次的节点更新覆盖了日本、美国、香港、韩国、欧洲、新加坡、加拿大等地区,最高速度可达18.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
