--- a/free-nodes/page-6.htm
+++ b/free-nodes/page-6.htm
@@ -91,6 +91,22 @@
 		<div class="welcome">
 		<div class="container">
 			<div class="col-md-4 agileits_welcome_grid_right">
+				<a href="/free-nodes/2024-3-16-clash-node-daily-updates.htm">
+					<img src="/uploads/20240228/c0fded8a01dfbc7be86e79e49ac0a627.webp" alt="3月16日20.6M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接" class="img-responsive" />
+				</a>
+			</div>
+			<div class="col-md-8 agileits_welcome_grid_left">
+				<a href="/free-nodes/2024-3-16-clash-node-daily-updates.htm">
+					<h2>3月16日20.6M/S|Shadowrocket/V2ray/SSR/Clash免费节点每天更新订阅链接</h2>
+				</a>
+				<p>这一次的节点更新覆盖了加拿大、美国、日本、香港、新加坡、韩国、欧洲等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
+			</div>
+			<div class="clearfix"> </div>
+		</div>
+	</div>
+		<div class="welcome">
+		<div class="container">
+			<div class="col-md-4 agileits_welcome_grid_right">
 				<a href="/free-nodes/2024-3-15-node-share-links.htm">
 					<img src="/uploads/20240228/d3c24bb20e9a1c8c2d93a6bf044ee5c4.webp" alt="3月15日19.6M/S|Clash/V2ray/SSR/Shadowrocket免费节点每天更新订阅链接" class="img-responsive" />
 				</a>
@@ -228,22 +244,6 @@
 					<h2>3月7日19.8M/S|V2ray/Clash/Shadowrocket/SSR免费节点每天更新订阅链接</h2>
 				</a>
 				<p>这一次的节点更新覆盖了韩国、加拿大、欧洲、日本、美国、香港、新加坡等地区,最高速度可达19.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
-			</div>
-			<div class="clearfix"> </div>
-		</div>
-	</div>
-		<div class="welcome">
-		<div class="container">
-			<div class="col-md-4 agileits_welcome_grid_right">
-				<a href="/free-nodes/2024-3-6-clash-node.htm">
-					<img src="/uploads/20240228/fef0909e4847bf6f5fa889948879dd84.webp" alt="3月6日18M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接" class="img-responsive" />
-				</a>
-			</div>
-			<div class="col-md-8 agileits_welcome_grid_left">
-				<a href="/free-nodes/2024-3-6-clash-node.htm">
-					<h2>3月6日18M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接</h2>
-				</a>
-				<p>这一次的节点更新覆盖了美国、加拿大、香港、日本、欧洲、韩国、新加坡等地区,最高速度可达18 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</i></p>
 			</div>
 			<div class="clearfix"> </div>
 		</div>
