--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
 
   gtag('config', 'G-GD12V8FJRL');
 </script>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3332997411212854"
+     crossorigin="anonymous"></script>
 </head>
 	
 <body>
